// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Tabs when no pageId should render section link 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  position: relative;
  bottom: -1px;
}

.c1 {
  font-size: 1em;
  font-weight: bold;
  color: #FFFFFF;
  padding: 0.3em 2em;
  border: 1px solid #5F7682;
  border-bottom: none;
  background-color: #5F7682;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px 4px 0 0;
  margin: 0 0.25em 0 0;
}

.c1.active {
  background: #FFFFFF;
  color: #5F7682;
  border: 1px solid #c3c3c3;
  border-bottom: none;
}

.c4 {
  background: #FFFFFF;
  border: 1px solid #c3c3c3;
  border-radius: 4px;
}

.c3 {
  font-size: 1em;
  font-weight: bold;
  color: #FFFFFF;
  padding: 0.3em 2em;
  border: 1px solid #5F7682;
  border-bottom: none;
  background-color: #5F7682;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px 4px 0 0;
  margin: 0 0.25em 0 0;
}

.c3.active {
  background: #FFFFFF;
  color: #5F7682;
  border: 1px solid #c3c3c3;
  border-bottom: none;
}

.c2 {
  opacity: 0.5;
  color: #c3c3c3;
}

<UnwrappedTabs
  match={
    Object {
      "params": Object {
        "pageId": "",
        "questionnaireId": "123",
        "sectionId": "888",
      },
    }
  }
>
  <div>
    <Tabs__TabsContainer
      data-test="tabs-nav"
    >
      <nav
        className="c0"
        data-test="tabs-nav"
      >
        <Tabs__Tab
          activeClassName="active"
          to="/questionnaire/123/888/design"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="c1"
            to="/questionnaire/123/888/design"
          >
            <Route
              path="\\\\/questionnaire\\\\/123\\\\/888\\\\/design"
            >
              <Link
                aria-current={null}
                className="c1"
                replace={false}
                to="/questionnaire/123/888/design"
              >
                <a
                  aria-current={null}
                  className="c1"
                  href="/questionnaire/123/888/design"
                  onClick={[Function]}
                >
                  Builder
                </a>
              </Link>
            </Route>
          </NavLink>
        </Tabs__Tab>
        <Tabs__DisabledTab>
          <Tabs__Tab
            className="c2"
          >
            <span
              className="c2 -span c3"
            >
              Routing
            </span>
          </Tabs__Tab>
        </Tabs__DisabledTab>
      </nav>
    </Tabs__TabsContainer>
    <Tabs__TabsBody
      data-test="tabs-body"
    >
      <div
        className="c4"
        data-test="tabs-body"
      >
        Tab Content
      </div>
    </Tabs__TabsBody>
  </div>
</UnwrappedTabs>
`;

exports[`components/Tabs when pageId present should render page link 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  position: relative;
  bottom: -1px;
}

.c1 {
  font-size: 1em;
  font-weight: bold;
  color: #FFFFFF;
  padding: 0.3em 2em;
  border: 1px solid #5F7682;
  border-bottom: none;
  background-color: #5F7682;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px 4px 0 0;
  margin: 0 0.25em 0 0;
}

.c1.active {
  background: #FFFFFF;
  color: #5F7682;
  border: 1px solid #c3c3c3;
  border-bottom: none;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #c3c3c3;
  border-radius: 4px;
}

<UnwrappedTabs
  match={
    Object {
      "params": Object {
        "pageId": "3",
        "questionnaireId": "1",
        "sectionId": "2",
      },
    }
  }
>
  <div>
    <Tabs__TabsContainer
      data-test="tabs-nav"
    >
      <nav
        className="c0"
        data-test="tabs-nav"
      >
        <Tabs__Tab
          activeClassName="active"
          to="/questionnaire/1/2/3/design"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="c1"
            to="/questionnaire/1/2/3/design"
          >
            <Route
              path="\\\\/questionnaire\\\\/1\\\\/2\\\\/3\\\\/design"
            >
              <Link
                aria-current={null}
                className="c1"
                replace={false}
                to="/questionnaire/1/2/3/design"
              >
                <a
                  aria-current={null}
                  className="c1"
                  href="/questionnaire/1/2/3/design"
                  onClick={[Function]}
                >
                  Builder
                </a>
              </Link>
            </Route>
          </NavLink>
        </Tabs__Tab>
        <Tabs__Tab
          activeClassName="active"
          to="/questionnaire/1/2/3/routing"
        >
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="c1"
            to="/questionnaire/1/2/3/routing"
          >
            <Route
              path="\\\\/questionnaire\\\\/1\\\\/2\\\\/3\\\\/routing"
            >
              <Link
                aria-current={null}
                className="c1"
                replace={false}
                to="/questionnaire/1/2/3/routing"
              >
                <a
                  aria-current={null}
                  className="c1"
                  href="/questionnaire/1/2/3/routing"
                  onClick={[Function]}
                >
                  Routing
                </a>
              </Link>
            </Route>
          </NavLink>
        </Tabs__Tab>
      </nav>
    </Tabs__TabsContainer>
    <Tabs__TabsBody
      data-test="tabs-body"
    >
      <div
        className="c2"
        data-test="tabs-body"
      >
        Tab Content
      </div>
    </Tabs__TabsBody>
  </div>
</UnwrappedTabs>
`;
